--- a/meetvers.io/src/html/index.njk
+++ b/meetvers.io/src/html/index.njk
@@ -189,7 +189,7 @@
                   </linearGradient>
                 </defs>
               </svg>
-              <h3>Profile NFTs</h3>
+              <h3 class="gradient--text">Profile NFTs</h3>
               <p>Unique NFTs allowing Meetvers users the most simple and secure way to acces
                 their Meetvers account via the Metamask or Wallet connect</p>
             </div>
@@ -249,7 +249,7 @@
                   </linearGradient>
                 </defs>
               </svg>
-              <h3>Incentivizing Award System</h3>
+              <h3 class="gradient--text">Incentivizing Award System</h3>
               <p>Automatic, transparent, and community&nbsp;&ndash; based system of awards to the most
                 active or successful Meetvers creators and&nbsp;users</p>
             </div>
@@ -281,27 +281,27 @@
         </div>
         <div class="box box--light mdc-layout-grid__cell">
           <p>Name:</p>
-          <h3>Meetvers</h3>
+          <h3 class="gradient--text">Meetvers</h3>
         </div>
         <div class="box box--light mdc-layout-grid__cell">
           <p>Token symbol:</p>
-          <h3>MIO</h3>
+          <h3 class="gradient--text">MIO</h3>
         </div>
         <div class="box box--light mdc-layout-grid__cell">
           <p>Total supply:</p>
-          <h3>1 000 000 000</h3>
+          <h3 class="gradient--text">1 000 000 000</h3>
         </div>
         <div class="box box--light mdc-layout-grid__cell">
           <p>Initial market capitalization:</p>
-          <h3>TBA</h3>
+          <h3 class="gradient--text">TBA</h3>
         </div>
         <div class="box box--light mdc-layout-grid__cell">
           <p>Initial fully diluted MCAP:</p>
-          <h3>2 000 000 DAI</h3>
+          <h3 class="gradient--text">2 000 000 DAI</h3>
         </div>
         <div class="box box--light mdc-layout-grid__cell">
           <p>Initial token price:</p>
-          <h3>1 MIO = 0.002 DAI</h3>
+          <h3 class="gradient--text">1 MIO = 0.002 DAI</h3>
         </div>
       </div>
     </div>
@@ -310,12 +310,12 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Distribution of the total supply:</h2>
+          <h2 class="gradient--text">Distribution of the total supply:</h2>
         </div>
         <div class="supply__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="mdc-layout-grid__inner">
             <div class="box box--light mdc-layout-grid__cell">
-              <h3>Provided liquidity (up to 10&nbsp;%):</h3>
+              <h3 class="gradient--text">Provided liquidity (up to 10&nbsp;%):</h3>
               <p>100 000 000 MIO</p>
             </div>
             <div class="box box--dark mdc-layout-grid__cell">
@@ -323,7 +323,7 @@
               <p>375 000 000 MIO</p>
             </div>
             <div class="box box--light mdc-layout-grid__cell">
-              <h3>Whitelist allocation (10&nbsp;%):</h3>
+              <h3 class="gradient--text">Whitelist allocation (10&nbsp;%):</h3>
               <p>100 000 000 MIO</p>
             </div>
             <div class="box box--dark mdc-layout-grid__cell">
@@ -331,7 +331,7 @@
               <p>20 000 000 MIO</p>
             </div>
             <div class="box box--light mdc-layout-grid__cell">
-              <h3>Meetvers team (3&nbsp;%):</h3>
+              <h3 class="gradient--text">Meetvers team (3&nbsp;%):</h3>
               <p>30 000 000 MIO</p>
             </div>
             <div class="box box--dark mdc-layout-grid__cell">
@@ -347,12 +347,12 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="box--shadow mdc-layout-grid__cell">
-          <h2>System of shards</h2>
+          <h2 class="gradient--text">System of shards</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-8-desktop">
           <div class="mdc-layout-grid__inner layout-wrapper">
             <div class="box box--light mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
-              <h3>Up to 5&nbsp;% of the buy/sell volume is distributed to the project treasury</h3>
+              <h3 class="gradient--text">Up to 5&nbsp;% of the buy/sell volume is distributed to the project treasury</h3>
               <ul>
                 <li><b>Vesting phase</b>: 5&nbsp;% of the buy/sell volume is directed to the project
                   treasury dedicated for the project development expenses
@@ -380,7 +380,7 @@
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>MIO token distribution</h2>
+          <h2 class="gradient--text">MIO token distribution</h2>
         </div>
       </div>
     </div>
@@ -393,24 +393,24 @@
           <h2>Team & Partners</h2>
         </div>
         <div class="box--team mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Name surname</h3>
+          <h3 class="gradient--text">Name surname</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#">Link</a>
+          <a class="gradient--text" href="#">Link</a>
         </div>
         <div class="box--team mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Name surname</h3>
+          <h3 class="gradient--text">Name surname</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#">Link</a>
+          <a class="gradient--text" href="#">Link</a>
         </div>
         <div class="box--team mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Name surname</h3>
+          <h3 class="gradient--text">Name surname</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#">Link</a>
+          <a class="gradient--text" href="#">Link</a>
         </div>
         <div class="box--team mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-          <h3>Name surname</h3>
+          <h3 class="gradient--text">Name surname</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <a href="#">Link</a>
+          <a class="gradient--text" href="#">Link</a>
         </div>
       </div>
     </div>
