Meetvers - stylizace footer button

--- a/meetvers.io/src/stylesheets/footer.scss
+++ b/meetvers.io/src/stylesheets/footer.scss
@@ -15,6 +15,12 @@
       height: auto;
     }
   }
+  .button {
+    @media (max-width: 839px) {
+      padding: 20px 0;
+      width: 100%;
+    }
+  }
 
   .navigation {
     nav {
