Meetvers - stylizace HP

--- a/meetvers.io/src/html/index.njk
+++ b/meetvers.io/src/html/index.njk
@@ -173,7 +173,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8">
           <div class="mdc-layout-grid__inner">
-            <div class="box box--light mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="order-1 box box--light mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="7" y="6" width="42" height="42" rx="21" fill="#E0E0E0"/>
                 <rect width="42" height="42" rx="21" fill="url(#paint0_linear_368_336)"/>
@@ -193,7 +193,7 @@
               <p>Unique NFTs allowing Meetvers users the most simple and secure way to acces
                 their Meetvers account via the Metamask or Wallet connect</p>
             </div>
-            <div class="box box--dark mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="order-2 box box--dark mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="7" y="6" width="42" height="42" rx="21" fill="#E0E0E0"/>
                 <rect width="42" height="42" rx="21" fill="url(#paint0_linear_368_722)"/>
@@ -213,7 +213,7 @@
               <p>System of algorithms containing blockchain data that is able to personalize
                 user’s&nbsp;feed without inadmissible aktivity tracking</p>
             </div>
-            <div class="box box--dark mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="order-4 box box--dark mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="7" y="6" width="42" height="42" rx="21" fill="#E0E0E0"/>
                 <rect width="42" height="42" rx="21" fill="url(#paint0_linear_368_556)"/>
@@ -233,7 +233,7 @@
               <p>Address to address messenger, the most convenient way to contact any
                 address at any&nbsp;time</p>
             </div>
-            <div class="box box--light mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="order-3 box box--light mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect x="7" y="6" width="42" height="42" rx="21" fill="#E0E0E0"/>
                 <rect width="42" height="42" rx="21" fill="url(#paint0_linear_368_395)"/>
