--- a/meetvers.io/src/stylesheets/typography.scss
+++ b/meetvers.io/src/stylesheets/typography.scss
@@ -8,7 +8,6 @@
 }
 
 body {
-  background: linear-gradient(73.63deg, #E30D7F -18.26%, #0B050F 44.46%, #2A2962 100.96%);
   color: var(--primary);
   margin: 0;
   padding: 0;
@@ -23,37 +22,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: geometricPrecision;
-}
-
-h1, h2 {
-  font-family: 'VT323', monospace;
-}
-
-h1 {
-  font-size: 34px;
-  text-transform: uppercase;
-  margin-bottom: 0;
-}
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 40px;
-}
-
-p {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 24px;
-}
-
-a {
-  font-family: Inter, sans-serif;
-
 }
 
 .prefix {
@@ -74,22 +42,52 @@ a {
   -webkit-text-fill-color: transparent;
 }
 
-@media screen and (min-width: 1024px) {
-  h1 {
-    font-size: 96px;
-    font-weight: 400;
-    line-height: 96px;
-  }
-  h2 {
-    font-size: 60px;
-    font-weight: 400;
-    line-height: 60px;
-  }
-  p {
-    font-size: 22px;
-    line-height: 35px;
+h1, h2 {
+  font-family: 'VT323', monospace;
+}
+
+h1 {
+  font-size: 96px;
+  font-weight: 400;
+  line-height: 96px;
+  @media (max-width: 539px) {
+    font-size: 64px;
+    line-height: 56px;
+    margin-top: 0;
   }
 }
+
+h2 {
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 60px;
+  @media (max-width: 539px) {
+    font-size: 60px;
+    line-height: 66px;
+  }
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 40px;
+}
+
+p {
+  font-size: 22px;
+  line-height: 35px;
+  @media (max-width: 539px) {
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 24px;
+  }
+}
+
+
+a {
+  font-family: Inter, sans-serif;
+}
+
 @media screen and (max-width: 1023px) {
   li {
     font-size: 18px;
@@ -117,9 +115,9 @@ a {
   border-radius: 6px;
   position: relative;
   min-width: 8.23em;
-  @media (max-width: 839px) {
-      padding: 20px 0;
-      width: 100%;
+  @media (max-width: 439px) {
+    padding: 20px 0;
+    width: 100%;
   }
 }
 
