--- a/meetvers.io/src/stylesheets/header.scss
+++ b/meetvers.io/src/stylesheets/header.scss
@@ -3,8 +3,20 @@ nav {
   /*  z-index: 10;*/
   /* width: 100%;*/
   padding: 24px;
-  background-color: transparent;
+  background-color: var(--dark-grey);
   transition: background-color 400ms cubic-bezier(0.64, 0.04, 0.26, 0.87);
+  .nav-hr {
+    @media (max-width: 539px) {
+      height: 1px;
+      color: var(--primary);
+      border: none;
+      opacity: .23;
+      padding: 1em 0;
+    }
+    @media (min-width: 540px) {
+      display: none;
+    }
+  }
 }
 nav.active {
   background-color: var(--secondary);
@@ -36,6 +48,9 @@ nav.active {
       align-items: center;
       flex-direction: row;
       padding-inline: 1rem;
+    }
+    @media (max-width: 839px) {
+      display: none;
     }
   }
 
@@ -69,6 +84,11 @@ nav.active {
     padding: 1.5rem;
     border-bottom: 1px solid var(--primary);
     text-align: center;
+    .nav-links__socials {
+      @media (min-width: 840px) {
+        display: none;
+      }
+    }
   }
 
   .nav-links.activated {
@@ -114,8 +134,9 @@ nav.active {
   .btn--menu[aria-expanded="true"] + .nav-links {
     transform: translate3d(0, 0, 0);
   }
+
   @media (max-width: 894px) {
-    .nav-socials, .nav-btn--white {
+    .nav-btn--white {
       display: none;
     }
   }
