--- a/meetvers.io/src/stylesheets/main.scss
+++ b/meetvers.io/src/stylesheets/main.scss
@@ -25,6 +25,7 @@ section {
 
 .box {
   z-index: 1;
+  transition: transform 0.8s;
   padding: 32px 32px 16px;
 
   p {
@@ -35,6 +36,12 @@ section {
 
   @media (max-width: 839px) {
     padding: 16px;
+  }
+  @media (min-width: 1024px) {
+    &:hover {
+      transform: scale(1.06);
+      cursor: pointer;
+    }
   }
 }
 
@@ -120,13 +127,14 @@ body {
 
   svg {
     width: clamp(22rem, 46vw, 80rem);
+    overflow: visible;
 
     .planet-mask {
-      animation: move-around 5s alternate-reverse infinite;
+      animation: move-around 14s alternate-reverse infinite;
     }
 
     .planet-body {
-      animation: move-around 5s infinite;
+      animation: move-around 14s infinite;
     }
 
     @media (max-width: 1024px) {
@@ -201,19 +209,12 @@ body {
     position: absolute;
     left: 0;
     bottom: 0;
-    @media (max-width: 839px) {
-      display: none;
-    }
   }
 
   svg.cube02 {
-    z-index: 0;
     position: absolute;
     right: 0;
     top: 1%;
-    @media (max-width: 839px) {
-      display: none;
-    }
   }
 
   svg.cube01, svg.cube02 {
@@ -243,6 +244,9 @@ body {
     }
     @media (max-width: 539px) {
       text-align: center;
+    }
+    @media (max-width: 1439px) {
+      z-index: 1;
     }
   }
 
@@ -284,22 +288,31 @@ body {
     @media (max-width: 839px) {
       margin-bottom: 2em;
     }
+    @media (max-width: 1439px) {
+      z-index: 1;
+    }
   }
 
   svg.cube01 {
-    z-index: 0;
     position: absolute;
     top: 42%;
     left: 0;
     animation: floating-down 5s infinite;
+    @media (max-width: 1439px) {
+      top: 5%;
+      left: 0;
+      z-index: -1;
+    }
   }
 
   svg.cube02 {
-    z-index: 0;
     position: absolute;
-    bottom: 0;
-    right: 0;
+    top: 0;
+    right: 10%;
     animation: floating-up 5s infinite;
+    @media (max-width: 1439px) {
+      display: none;
+    }
   }
 
   .box {
@@ -350,6 +363,11 @@ body {
       padding: 12px 32px 16px;
     }
   }
+  @media (min-width: 1024px) {
+    .box:hover {
+      transform: scale(0.94);
+    }
+  }
 }
 
 //
@@ -376,8 +394,15 @@ body {
     left: 5%;
     top: 20%;
     animation: floating-down 5s infinite;
+  }
+  svg.cube02 {
+    position: absolute;
+    bottom: -30%;
+    right: -4%;
+    z-index: 2;
+    animation: floating-up 5s infinite;
     @media (max-width: 839px) {
-      display: none;
+    display: none;
     }
   }
 
@@ -392,6 +417,16 @@ body {
     }
   }
 
+  .box, .box--shadow {
+    transition: transform 0.8s;
+    @media (min-width: 1024px) {
+      &:hover {
+        transform: scale(0.94);
+        cursor: pointer;
+      }
+    }
+  }
+
   .box--shadow {
     position: relative;
     text-align: center;
@@ -400,18 +435,12 @@ body {
     background: rgba(255, 255, 255, 0.77);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
     backdrop-filter: blur(20px);
+    z-index: 2;
     @media (min-width: 540px) {
       padding: 120px 60px;
     }
     @media (max-width: 539px) {
       width: 100%;
-    }
-
-    svg.cube02 {
-      position: absolute;
-      bottom: -34%;
-      right: -4%;
-      animation: floating-up 5s infinite;
     }
   }
 }
@@ -458,14 +487,15 @@ body {
 
   .box--team {
     background-color: var(--primary);
-    padding: 12px 24px 24px;
+    padding: 24px 24px 12px 24px;
+    transition: transform 0.8s;
 
     h3 {
       font-family: 'VT323', monospace;
       font-weight: 400;
       font-size: 40px;
       line-height: 40px;
-      margin-bottom: 0;
+      margin: 8px 0 0 0;
     }
 
     p {
@@ -478,18 +508,41 @@ body {
       font-weight: 700;
       font-size: 16px;
       line-height: 19px;
-      text-fill-color: transparent;
+      transition: all 0.4s;
+
+      &:after {
+        content: "→";
+        display: inline-flex;
+        padding-left: 14px;
+      }
 
       &:hover {
-        transition: ease-in 0.4s;
         opacity: 0.4;
       }
     }
 
-    a:after {
-      content: "→";
-      display: inline-flex;
-      padding-left: 14px;
+    img {
+      width: 100%;
+      height: auto;
+    }
+
+    @media (min-width: 1024px) {
+      &:hover {
+        transform: scale(1.06);
+        cursor: pointer;
+      }
+    }
+  }
+
+  .team__logo {
+    margin-top: 4em;
+    text-align: center;
+    @media (max-width: 560px) {
+      margin-top: 2em;
+      svg {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
@@ -509,18 +562,18 @@ body {
     position: absolute;
     top: 40%;
     left: 0;
+    animation: floating-up 5s infinite;
+    @media (max-width: 1439px) {
+      top: 0;
+      left: 0;
+    }
   }
 
   svg.cube02 {
     position: absolute;
     bottom: 0;
     right: 0;
-  }
-
-  svg.cube01, svg.cube02 {
-    @media (max-width: 1439px) {
-      display: none;
-    }
+    animation: floating-down 5s infinite;
   }
 
   .faq__intro {
@@ -583,7 +636,7 @@ body {
       .content {
         color: var(--secondary);
         position: relative;
-        padding: 0 10px;
+        padding: 0 24px;
         height: 0;
         transition: 0.5s;
         overflow-y: auto;
@@ -591,7 +644,17 @@ body {
         p {
           font-size: 24px;
           font-weight: 400;
+          color: var(--grey);
           line-height: 29px;
+        }
+
+        a {
+          color: var(--purple);
+          text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
         }
 
         @media (max-width: 539px) {
@@ -610,7 +673,7 @@ body {
     .contentBx.active {
       .content {
         height: 150px;
-        padding: 10px;
+        padding: 0 24px;
       }
 
       .label-icon {
