--- a/meetvers.io/src/stylesheets/typography.scss
+++ b/meetvers.io/src/stylesheets/typography.scss
@@ -5,6 +5,8 @@
   --grey: #4F4F4F;
   --dark-grey: #333333;
   --light-grey: #F2F2F2;
+
+  --purple: #9948FF;
 }
 
 body {
@@ -26,9 +28,11 @@ body {
 
 .prefix {
   font-family: 'VT323', monospace;
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 28px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
 }
 
 .suffix {
@@ -52,7 +56,7 @@ h1 {
   line-height: 96px;
   @media (max-width: 539px) {
     font-size: 64px;
-    line-height: 56px;
+    line-height: 66px;
     margin-top: 0;
   }
 }
@@ -63,7 +67,7 @@ h2 {
   line-height: 60px;
   @media (max-width: 539px) {
     font-size: 60px;
-    line-height: 66px;
+    line-height: 62px;
   }
 }
 
@@ -71,6 +75,9 @@ h3 {
   font-size: 22px;
   font-weight: 700;
   line-height: 40px;
+  @media (max-width: 539px) {
+    line-height: 28px;
+  }
 }
 
 p {
@@ -79,13 +86,14 @@ p {
   @media (max-width: 539px) {
       font-size: 18px;
       font-weight: 400;
-      line-height: 24px;
+      line-height: 22px;
   }
 }
 
 
 a {
   font-family: Inter, sans-serif;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1023px) {
