--- a/meetvers.io/src/stylesheets/flipclock.scss
+++ b/meetvers.io/src/stylesheets/flipclock.scss
@@ -172,13 +172,6 @@
   }
 }
 
-.flip-clock-wrapper ul li a div .shadow {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-}
-
 .flip-clock-wrapper ul li a div.up {
   -webkit-transform-origin: 50% 100%;
   -moz-transform-origin: 50% 100%;
@@ -225,7 +218,6 @@
   width: 100%;
   height: 200%;
   color: var(--secondary);
-  text-shadow: 0 1px 2px #000;
   text-align: center;
   background-color: var(--primary);
   border-radius: 6px;
@@ -290,7 +282,7 @@
   color: var(--primary);
   position: absolute;
   top: -1.5em;
-  right: -40px;
+  left: 60px;
   text-shadow: none;
   @media (max-width: 659px) {
     display: none;
@@ -298,11 +290,11 @@
 }
 
 .flip-clock-divider.minutes .flip-clock-label {
-  right: -88px;
+  right: -86px;
 }
 
 .flip-clock-divider.seconds .flip-clock-label {
-  right: -91px;
+  right: -90px;
 }
 
 .flip-clock-dot.top {
