--- a/www.hookamonk.com/src/html/for-lounge/index.njk
+++ b/www.hookamonk.com/src/html/for-lounge/index.njk
@@ -55,49 +55,68 @@
       </div>
     </div>
   </section>
-  <section class="hm-submit-form">
+   {{ css("v2/catering") }}
+  <section id="hm-warp" class="hm-warp">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner hm-layout-wrapper">
-        <div class="hm-submit-form__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
-          <h2>Get in <span class="text--orange">Touch</span></h2>
-          <div id="contact-container">
-            <form id="contact-form" action="https://hookamonk-api.monks.cloud/v1/contact-form" method="POST">
-              <input type="hidden" name="productName" value="Warp for home"/>
-              <input type="hidden" name="productUrl" value="for-home"/>
-              <input type="text" name="name" placeholder="Name" required/>
-              <input type="text" name="email" placeholder="Email" required/>
-              <input type="number" name="telephone" placeholder="Telephone"/>
-              <textarea rows="4" cols="50" name="message" form="contact-form" placeholder="Enter text here..."></textarea><br>
-              <a class="button button__contained button__contained--light" type="submit">Submit</a>
-            </form>
-          </div>
-          <script type="module">
-            const contactForm = document.getElementById("contact-form");
-            contactForm.addEventListener("submit", async e => {
-              e.preventDefault();
-              const button = e.target.querySelector("button");
-              button.disabled = true;
-              const formData = new FormData(e.target);
-
-              let data = {};
-              formData.forEach((value, key) => data[key] = value);
-
-              const contactContainer = document.getElementById("contact-container");
-              contactContainer.innerHTML = `<div class="hm-check-icon">✔︎</div><p>Thank you, your request has been sent and we will get back to you as soon as possible.</p> <h4>Hookamonk team</h4>`
-
-              await fetch(e.target.action, {
-                method: e.target.method.toUpperCase(),
-                body: JSON.stringify(data),
-                mode: "no-cors"
-              });
-
-            })
-          </script>
+        <div class="hm-about__text mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Interested<span class="text--orange">in getting Warp</span></h2>
+          <p>Interested in getting Warp for your lounge, restaurant or coffee place and introducing a new - hassle free and healthier way of smoking to your customers? We look forward to welcoming you to our Hookamonk spots network.</p>
+        </div>
+        <div class="hm-about__img mdc-layout-grid__cell mdc-layout-grid__cell--span-12 wow flipInX">
+          <img title="Hookamonk while using photo"
+               alt="[photo] Hookamonk while using photo"
+               width="800px"
+               src="{{ "/hookamonk.com/img_product-lounge" | cloudinaryUrl(width=800) }}"
+               srcset="{{ "/hookamonk.com/img_product-lounge" | cloudinaryUrl(width=800) }} 1x,
+                     {{ "/hookamonk.com/img_product-lounge" | cloudinaryUrl(width=400,dpr=1.5) }} 1.5x,
+                     {{ "/hookamonk.com/img_product-lounge" | cloudinaryUrl(width=400,dpr=2) }} 2x"/>
         </div>
       </div>
     </div>
   </section>
+<section class="hm-submit-form hm-submit-form_bg">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner hm-layout-wrapper">
+      <div class="hm-submit-form__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop">
+        <h2>Get in <span class="text--orange">Touch</span></h2>
+        <div id="contact-container">
+          <form id="contact-form" action="https://hookamonk-api.monks.cloud/v1/contact-form" method="POST">
+            <input type="hidden" name="productName" value="Warp for home"/>
+            <input type="hidden" name="productUrl" value="for-home"/>
+            <input type="text" name="name" placeholder="Name" required/>
+            <input type="text" name="email" placeholder="Email" required/>
+            <input type="number" name="telephone" placeholder="Telephone"/>
+            <textarea rows="4" cols="50" name="message" form="contact-form" placeholder="Enter text here..."></textarea><br>
+            <a class="button button__contained button__contained--light" type="submit">Submit</a>
+          </form>
+        </div>
+        <script type="module">
+          const contactForm = document.getElementById("contact-form");
+          contactForm.addEventListener("submit", async e => {
+            e.preventDefault();
+            const button = e.target.querySelector("button");
+            button.disabled = true;
+            const formData = new FormData(e.target);
 
+            let data = {};
+            formData.forEach((value, key) => data[key] = value);
+
+            const contactContainer = document.getElementById("contact-container");
+            contactContainer.innerHTML = `<div class="hm-check-icon">✔︎</div><p>Thank you, your request has been sent and we will get back to you as soon as possible.</p> <h4>Hookamonk team</h4>`
+
+            await fetch(e.target.action, {
+              method: e.target.method.toUpperCase(),
+              body: JSON.stringify(data),
+              mode: "no-cors"
+            });
+
+          })
+        </script>
+      </div>
+    </div>
+  </div>
+</section>
 
 {% endblock %}
 
