Add new case study

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -236,6 +236,16 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>It’s&nbsp;not what you say,<br>it’s&nbsp;what you do.</h2>
           </div>
+          <a href="https://calamar.app/"
+             class="shrink our-work_box box--calamar mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h3>Winning the Subsquid<br> hackathon bounty for building the Calamar.</h3>
+            <p>An explorer for the Polkadot ecosystem. 
+              Collaborative effort of the Subsquid and HydraDX teams. Data API provided by the subsquid to present the blockchain data. 
+              The explorer is primarily designed to search for blocks, extrinsics, and accounts information. 
+              Currently we are actively developing other Calamar features such as displaying XCM transfers, 
+              parachains dashboards and accounts statistics. Check out our progress here:</p>
+            <span class="representative">Nataliya Rozhok / Chief Information Officer</span>
+          </a>
           <a href="https://www.topmonks.com/case-studies/xixoio/"
              class="shrink our-work_box box--fintech mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Fintech platform<br> with multiple modules.</h3>
