--- a/blockchain.topmonks.com/src/stylesheets/style.scss
+++ b/blockchain.topmonks.com/src/stylesheets/style.scss
@@ -293,6 +293,16 @@ img.responsive {
     }
   }
 
+  .box--calamar {
+    background: cloudinaryUrl("blockchain.topmonks.com/calamar.png") right bottom no-repeat, #3fbed9;
+    background-size: 50%;
+    box-shadow: 10px 10px 40px rgba(57, 95, 246, 0.2);
+    @media (max-width: 739px) {
+      background: #3fbed9;
+    }
+  }
+
+
   @media screen and (min-width: 840px) {
     padding: 4em 0 6em;
 
