--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -236,6 +236,13 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>It’s&nbsp;not what you say,<br>it’s&nbsp;what you do.</h2>
           </div>
+          <a href="https://hydradx.io/"
+             class="shrink our-work_box box--hydra-dx mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h3>Creation of the proof of concept automated</h3>
+            <p>Market maker on top of the Substrate framework in the Polkadot ecosystem. Consultation contained research of the current status of the DeFi, stablecoins, economic models of DeFi and even copywriting of the whitepaper.
+            Soon after the initial project launch the team was acquired by the customer ZeePrime Capital, which funded the development of HydraDX market. 
+            We maintain friendly relationships and cooperation continues up to date.</p>
+          </a>
           <a href="https://calamar.app/"
              class="shrink our-work_box box--calamar mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Winning the Subsquid<br> hackathon bounty for building the Calamar.</h3>
@@ -244,7 +251,6 @@
               The explorer is primarily designed to search for blocks, extrinsics, and accounts information. 
               Currently we are actively developing other Calamar features such as displaying XCM transfers, 
               parachains dashboards and accounts statistics. Check out our progress here:</p>
-            <span class="representative">Nataliya Rozhok / Chief Information Officer</span>
           </a>
           <a href="https://www.topmonks.com/case-studies/xixoio/"
              class="shrink our-work_box box--fintech mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
