add new reference

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -236,16 +236,24 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>It’s&nbsp;not what you say,<br>it’s&nbsp;what you do.</h2>
           </div>
+           <a href="http://meetvers.io/"
+             class="shrink our-work_box box--meetvers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h3>Meetvers is a A Web3search engine  <br>built on Lens protocol for the MVP</h3>
+            <p>CDuring the whole process, the studio was keen on discussing and learning new concepts. At the same time, they were able to provide their insights, 
+              which we found helpful. The execution was always on point and had a high standart. We recommend it to anyone 
+              looking for an open minded experienced team.”</p>
+              <span class="representative">Vojtech Pour / Co-Founder</span>
+          </a>
           <a href="https://hydradx.io/"
              class="shrink our-work_box box--hydra-dx mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h3>Creation of the proof of concept automated</h3>
-            <p>Market maker on top of the Substrate framework in the Polkadot ecosystem. Consultation contained research of the current status of the DeFi, stablecoins, economic models of DeFi and even copywriting of the whitepaper.
+            <h3>Development of HydraDX parachain</h3>
+            <p>Creation of the proof of concept automated market maker on top of the Substrate framework in the Polkadot ecosystem. Consultation contained research of the current status of the DeFi, stablecoins, economic models of DeFi and even copywriting of the whitepaper.
             Soon after the initial project launch the team was acquired by the customer ZeePrime Capital, which funded the development of HydraDX market. 
             We maintain friendly relationships and cooperation continues up to date.</p>
           </a>
           <a href="https://calamar.app/"
              class="shrink our-work_box box--calamar mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h3>Winning the Subsquid<br> hackathon bounty for building the Calamar.</h3>
+            <h3>Winning the Subsquid<br> hackathon bounty for building the Calamar</h3>
             <p>An explorer for the Polkadot ecosystem. 
               Collaborative effort of the Subsquid and HydraDX teams. Data API provided by the subsquid to present the blockchain data. 
               The explorer is primarily designed to search for blocks, extrinsics, and accounts information. 
@@ -254,7 +262,7 @@
           </a>
           <a href="https://www.topmonks.com/case-studies/xixoio/"
              class="shrink our-work_box box--fintech mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <h3>Fintech platform<br> with multiple modules.</h3>
+            <h3>Fintech platform<br> with multiple modules</h3>
             <p>We found our cooperation with TopMonks partner very productive. Professional
               approach expressed in initiative, creativity, deep knowledge of subject field
               and strong compliance with time requirements allowed us to launch product on
