--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -239,8 +239,8 @@
            <a href="http://meetvers.io/"
              class="shrink our-work_box box--meetvers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Meetvers is a A Web3search engine  <br>built on Lens protocol for the MVP</h3>
-            <p>CDuring the whole process, the studio was keen on discussing and learning new concepts. At the same time, they were able to provide their insights, 
-              which we found helpful. The execution was always on point and had a high standart. We recommend it to anyone 
+            <p>CDuring the whole process, the studio was keen on discussing and learning new concepts. At the same time, they were able to provide their insights,
+              which we found helpful. The execution was always on point and had a high standart. We recommend it to anyone
               looking for an open minded experienced team.”</p>
               <span class="representative">Vojtech Pour / Co-Founder</span>
           </a>
@@ -248,16 +248,16 @@
              class="shrink our-work_box box--hydra-dx mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Development of HydraDX parachain</h3>
             <p>Creation of the proof of concept automated market maker on top of the Substrate framework in the Polkadot ecosystem. Consultation contained research of the current status of the DeFi, stablecoins, economic models of DeFi and even copywriting of the whitepaper.
-            Soon after the initial project launch the team was acquired by the customer ZeePrime Capital, which funded the development of HydraDX market. 
+            Soon after the initial project launch the team was acquired by the customer ZeePrime Capital, which funded the development of HydraDX market.
             We maintain friendly relationships and cooperation continues up to date.</p>
           </a>
           <a href="https://calamar.app/"
              class="shrink our-work_box box--calamar mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Winning the Subsquid<br> hackathon bounty for building the Calamar</h3>
-            <p>An explorer for the Polkadot ecosystem. 
-              Collaborative effort of the Subsquid and HydraDX teams. Data API provided by the subsquid to present the blockchain data. 
-              The explorer is primarily designed to search for blocks, extrinsics, and accounts information. 
-              Currently we are actively developing other Calamar features such as displaying XCM transfers, 
+            <p>An explorer for the Polkadot ecosystem.
+              Collaborative effort of the Subsquid and HydraDX teams. Data API provided by the subsquid to present the blockchain data.
+              The explorer is primarily designed to search for blocks, extrinsics, and accounts information.
+              Currently we are actively developing other Calamar features such as displaying XCM transfers,
               parachains dashboards and accounts statistics. Check out our progress here:</p>
           </a>
           <a href="https://www.topmonks.com/case-studies/xixoio/"
@@ -462,7 +462,7 @@
             </a>
           </div>
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            {{ avatar("photo of Jan Fabian", "blockchain.topmonks.com/avatar/_jan-fabian.png", 92) }}
+            {{ avatar("photo of Jan Fabian", "blockchain.topmonks.com/avatar/jan-fabian.jpg", 92) }}
             <h3>Jan Fabian</h3>
             <p>Developer</p>
 
@@ -516,6 +516,52 @@
             <p>Designer</p>
 
             <a href="https://www.linkedin.com/in/jaklradek/" title="Radek Jakl on LinkedIn">
+              <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                   xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>LinkedIn</title>
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                    <g transform="translate(0.000000, 3772.000000)">
+                      <g transform="translate(250.000000, 150.000000)">
+                        <path
+                          d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z"
+                          id="Fill-1"></path>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </a>
+          </div>
+          <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+            {{ avatar("photo of Richard Jedlička", "blockchain.topmonks.com/avatar/T03R38ACE-U03HRETDSD9-8217c45677d1-512.jpg", 92) }}
+            <h3>Richard Jedlička</h3>
+            <p>Developer</p>
+
+            <a href="https://github.com/uiii" title="Richard Jedlička on GitHub">
+              <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                   xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>GitHub Icon</title>
+                <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                  <g transform="translate(-383.000000, -4098.000000)" fill="#1C1C37">
+                    <g transform="translate(0.000000, 3772.000000)">
+                      <g transform="translate(250.000000, 150.000000)">
+                        <path
+                          d="M144.01513,184.07304 C142.739075,184.084512 141.809629,184.952226 141.812062,186.129516 C141.814496,187.324535 142.824423,188.244395 144.097349,188.210848 C145.377923,188.177127 146.287032,187.311846 146.281991,186.131254 C146.276602,184.886 145.367841,184.060872 144.01513,184.07304 Z M142.146503,201.737074 L145.988051,201.737074 L145.988051,189.859887 L142.146503,189.859887 L142.146503,201.737074 Z M160.3431,201.737595 C160.3431,200.77793 160.359092,199.912649 160.339797,199.048411 C160.297384,197.141074 160.35127,195.22209 160.151197,193.330571 C159.965029,191.571676 158.981523,190.238469 157.195986,189.734389 C155.425745,189.234479 153.809861,189.506162 152.543019,190.983988 C152.468274,191.071072 152.362936,191.131735 152.225613,191.241938 C152.200582,190.723256 152.180245,190.300176 152.160255,189.884396 L148.27751,189.884396 L148.27751,201.716389 L152.197801,201.716389 L152.197801,200.807479 C152.197801,198.867116 152.18911,196.926926 152.201104,194.986737 C152.208926,193.72497 153.005222,192.801286 154.126919,192.710551 C155.388546,192.608344 156.05708,193.199857 156.289311,194.651088 C156.343892,194.992125 156.356234,195.342548 156.35745,195.6888 C156.364056,197.426314 156.35832,199.163828 156.362839,200.901343 C156.363534,201.176675 156.393954,201.452007 156.411336,201.737595 L160.3431,201.737595 Z M150.518471,176.000273 C160.296689,176.054331 168.064091,183.914863 167.999601,193.690901 C167.93685,203.246883 160.00049,211.043274 150.380279,210.999819 C140.749118,210.956364 132.889067,202.98702 133.001185,193.378893 C133.114171,183.6809 140.909733,175.947083 150.518471,176.000273 Z"
+                          id="Fill-1"></path>
+                      </g>
+                    </g>
+                  </g>
+                </g>
+              </svg>
+            </a>
+          </div>
+          <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+            {{ avatar("photo of Pavel Trnka", "blockchain.topmonks.com/avatar/T03R38ACE-U0A3NDLJZ-79c1295e4b0b-512.png", 92) }}
+            <h3>Pavel Trnka</h3>
+            <p>Designer</p>
+
+            <a href="https://www.linkedin.com/in/pavel-trnka-a2045b76" title="Pavel Trnka on LinkedIn">
               <svg width="35px" height="35px" viewBox="0 0 35 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>LinkedIn</title>
