Add new reference

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -236,10 +236,15 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h2>It’s&nbsp;not what you say,<br>it’s&nbsp;what you do.</h2>
           </div>
+           <a href="https://www.topmonks.com/case-studies/brute-coin/"
+             class="shrink our-work_box box--brute-coin mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <h3>Together with TopMonks we’ve integrate<br> the blockchain technology into <br>the standard e-commerce platform.</h3>
+            <p>During the development of this unconventional project, we encountered many unpredictable problems. However, the guys at TopMonks handled everything in an professional manner. Great communication, friendly bunch of people.</p>
+          </a>
            <a href="http://meetvers.io/"
              class="shrink our-work_box box--meetvers mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
             <h3>Meetvers is a A Web3search engine  <br>built on Lens protocol for the MVP</h3>
-            <p>CDuring the whole process, the studio was keen on discussing and learning new concepts. At the same time, they were able to provide their insights,
+            <p>During the whole process, the studio was keen on discussing and learning new concepts. At the same time, they were able to provide their insights,
               which we found helpful. The execution was always on point and had a high standart. We recommend it to anyone
               looking for an open minded experienced team.”</p>
               <span class="representative">Vojtech Pour / Co-Founder</span>
