--- a/blockchain.topmonks.com/src/stylesheets/header.scss
+++ b/blockchain.topmonks.com/src/stylesheets/header.scss
@@ -4,8 +4,9 @@
   top: 0;
   @media screen and (max-width: 839px) {
     position: fixed;
+    width: 100%;
     background-color: var(--mdc-theme--primary-bg);
-    height: 60px;
+    height: 56px;
     .layout-wrapper {
       padding: 8px 16px 0 8px;
     }
